--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -4,8 +4,8 @@ body {
 
 .main_box {
     display: flex;
-    justify-content: space-between;
     padding: 40px;
+    gap: 20px;
 }
 
 .tools_bar {
@@ -77,9 +77,87 @@ body {
     width: 100px;
 }
 
-
-canvas {
-    /* background-color: #f6f7fa; */
+#myCanvas {
+    background-color: #f6f7fa;
     border: 2px solid #6C3287;
     border-radius: 20px;
+    width: 100%; /* Make the canvas take up the entire width of the grid cell */
+    height: 100%; /* Make the canvas take up the entire height of the grid cell */
+    box-sizing: border-box; /* Include padding and border in the width and height */
+}
+
+.grid_content {
+    display: grid;
+    grid-template-columns: 760px 760px;
+    grid-template-rows: 750px;
+    border: 2px solid #6C3287;
+    border-radius: 30px;
+    box-shadow: 5px 5px #6C3287;
+}
+
+.grid_cell {
+    border: 2px solid #6C3287;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 5px;
+    color: var(--input_color);
+    position: relative;
+    box-sizing: border-box;
+}
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: var(--input_bg_color);
+}
+
+.modal-content {
+    background-color: var(--input_bg_color);
+    margin: 15% auto;
+    padding: 20px;
+    border: 2px solid #6C3287;
+    width: 20%;
+    color: var(--input_color);
+}
+
+.close {
+    color: #6C3287;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.add_option {
+    border-radius: 15px;
+    width: 100%;
+    background-color: var(--input_bg_color);
+    border: 3px solid transparent;
+    color: var(--input_color);
+    box-sizing: border-box;
+}
+
+.add_option:hover {
+    border-color: #6C3287;
+    outline: none;
+}
+
+.add_option:focus {
+    background-color: #6C3287;
+    color: #fafafa;
 }
