--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -31,32 +31,6 @@
 <body>
   <header>
       <a class="navbar-brand" href="#">ProjetoX</a>
-      <div class="wrapper">
-        <div class="option">
-          <input checked="" value="option1" name="btn" type="radio" class="input" />
-          <div class="btn">
-            <span class="span">Pag1</span>
-          </div>
-        </div>
-        <div class="option">
-          <input value="option2" name="btn" type="radio" class="input" />
-          <div class="btn">
-            <span class="span">Pag2</span>
-          </div>
-        </div>
-        <div class="option">
-          <input value="option3" name="btn" type="radio" class="input" />
-          <div class="btn">
-            <span class="span">Pag3</span>
-          </div>
-        </div>
-        <div class="option">
-            <input value="option4" name="btn" type="radio" class="input" />
-            <div class="btn">
-              <span class="span">. . .</span>
-            </div>
-        </div>
-      </div>
       <div class="theme-switch">
         <input type="checkbox" id="theme-checkbox" />
         <label for="theme-checkbox">
@@ -94,11 +68,16 @@
     <article class="main_box">
       <div class="tools_bar">
         <div class="tools_list">
-            <input value="Text" type="button" class="tool_option">
-            <input value="Draw" type="button" class="tool_option">
-            <input value="tool3" type="button" class="tool_option">
-            <input value="tool4" type="button" class="tool_option">
-            <input value="tool5" type="button" class="tool_option">
+            <input value="✚" type="button" class="tool_option" id="addCellBtn">
+        </div>
+
+        <div class="modal" id="myModal">
+          <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>Choose an option:</p>
+              <button class="add_option" id="textOption">Text</button>
+              <button class="add_option" id="drawOption">Drawing</button>
+          </div>
         </div>
 
         <div class="home_space">
@@ -106,18 +85,36 @@
         </div>
       </div>
       <div class="grid_content">
-        <div class="canva_tool">
-          <canvas id="myCanvas" width="600" height="600"></canvas>
-          <div class="canva_settings">
-            <button id="eraserBtn" class="button_canva">Drawing</button>
-            <input type="range" id="eraserSize" min="1" max="50" value="10">
-            <label for="eraserSize">Eraser Size</label>
-            <input type="color" id="colorPicker" value="#6C3287">
-            <input type="range" id="pencilSize" min="1" max="20" value="1">
-            <label for="pencilSize">Pencil Size</label>
+        <div class="grid_cell">
+
+        </div>
+        <div class="grid_cell">
+          <div id="canvas_cell">
+            <canvas id="myCanvas" height="270"></canvas>
+            <div class="canva_settings">
+              <button id="eraserBtn" class="button_canva">Drawing</button>
+              <input type="range" id="eraserSize" min="1" max="50" value="10">
+              <label for="eraserSize">Eraser Size</label>
+              <input type="color" id="colorPicker" value="#6C3287">
+              <input type="range" id="pencilSize" min="1" max="20" value="1">
+              <label for="pencilSize">Pencil Size</label>
+            </div>
           </div>
         </div>
       </div>
+
+
+      <!-- <div class="canva_tool">
+        <canvas id="myCanvas" width="200" height="300"></canvas>
+        <div class="canva_settings">
+          <button id="eraserBtn" class="button_canva">Drawing</button>
+          <input type="range" id="eraserSize" min="1" max="50" value="10">
+          <label for="eraserSize">Eraser Size</label>
+          <input type="color" id="colorPicker" value="#6C3287">
+          <input type="range" id="pencilSize" min="1" max="20" value="1">
+          <label for="pencilSize">Pencil Size</label>
+        </div>
+      </div> -->
     </article>
   </main>
   <footer>
