--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -104,12 +104,15 @@ article{
     width: 100px;
 }
 
+.canvas_cell {
+    height: 100%;
+}
+
 .myCanvas {
     background-color: #f6f7fa;
     border: 2px solid #6C3287;
     border-radius: 20px;
-    width: 100%; 
-    height: 100%;
+    width: 100%;
     box-sizing: border-box;
 }
 
