--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -25,18 +25,33 @@
   <link rel="stylesheet" href="css/details_css/option_bar.css">
 
   <link rel="stylesheet" href="css/details_css/day_night.css">
+  <link rel="stylesheet" href="css/details_css/save_button.css">
 
   <script defer src="js/script.js"></script>
   <script defer src="js/drawCanvas.js"></script>
   <script defer src="js/text.js"></script>
+  <script src="js/backendText.js"></script>
 
   <script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js"></script>
+  
 
 </head>
 
 <body>
   <header>
     <a class="navbar-brand" href="#">ProjetoX</a>
+
+    <button class="bookmarkBtn" onclick="salvarDados()">
+      <span class="IconContainer">
+        <svg viewBox="0 0 384 512" height="0.9em" class="icon">
+          <path
+            d="M0 48V487.7C0 501.1 10.9 512 24.3 512c5 0 9.9-1.5 14-4.4L192 400 345.7 507.6c4.1 2.9 9 4.4 14 4.4c13.4 0 24.3-10.9 24.3-24.3V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48z"
+          ></path>
+        </svg>
+      </span>
+      <p class="text">Save</p>
+    </button>
+
     <div class="theme-switch">
       <input type="checkbox" id="theme-checkbox" />
       <label for="theme-checkbox">
@@ -107,14 +122,6 @@
   <footer>
 
   </footer>
-
-  <script>
-    ClassicEditor
-    .create(document.querySelector("#editor"))
-    .catch(error => {
-  console.error(error);
-    });
-  </script>
 
 </body>
 
